---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export const theAnswer = 42;

/**
 * Built by a race of hyper-intelligent pan-dimensional beings to
 * calculate the Ultimate Answer to the Ultimate Question of Life,
 * The Universe, and Everything.
 *
 * This JSDoc comment should not be transferred to the exported
 * instance variable below.
 */
class DeepThought {
	answerMe(): number {
		return theAnswer;
	}

	giveMeABiggerAnswer(delta: number) {
		// Return type should be inferred to `number`.
		// TODO: At some point.
		return theAnswer + delta;
	}

	whatWasTheUltimateQuestion(): unknown {
		// This should not be inferred to `string` due to the
		// explicit annotation in the signature.
		return "Life, The Universe, and Everything";
	}
}

export const superComputer = new DeepThought();
```

## Module Info

```
Exports {
  "theAnswer" => {
    ExportOwnExport => JsOwnExport::Binding(26..35)
  }
  "superComputer" => {
    ExportOwnExport => JsOwnExport::Binding(1077..1090)
  }
}
Imports {
  No imports
}
```
